// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsList Should render an unordered list 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<ul
  className="jsx-1825249063 kirk-items-list"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#1"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#2"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#3"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with some separators 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<ul
  className="jsx-1825249063 kirk-items-list"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#1"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#2"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item kirk-items-list-item--withSeparator"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#3"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with the separators classname 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<ul
  className="jsx-1825249063 kirk-items-list kirk-items-list--withSeparators"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#1"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#2"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-choice"
      href="#3"
    >
      <div
        className="jsx-1542968643 kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c0"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="jsx-1542968643 kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c1"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;
